# polymarket_api

./: .gitignore  README.md  pyproject.toml
.polymarket_api/: pyvenv.cfg
polymarket_api/: __init__.py  client.py  live_orderbook.py
polymarket_api.egg-info/: SOURCES.txt  requires.txt  top_level.txt
tests/: test_client.py
