[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-api"
version = "0.1.0"
description = "Python data API client for Polymarket Gamma market-data endpoints"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "websockets>=12.0",
  "rich>=13.7.0",
]

[project.scripts]
polymarket-live-orderbook = "polymarket_api.live_orderbook:main"

[tool.setuptools.packages.find]
where = ["."]
